--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "drag-drop": "^6.0.0",
     "express": "^4.17.1",
+    "express-ip": "^1.0.4",
     "inquirer": "^7.1.0",
     "jsdom": "^16.2.1",
     "requirer": "0.0.4",
@@ -27,7 +28,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
