Receive module done

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "ascii-art": "^2.5.0",
     "browserify": "^16.5.0",
+    "cfonts": "^2.8.1",
+    "clear": "^0.1.0",
     "cli-progress": "^3.6.0",
     "cli-spinner": "^0.2.10",
     "colors": "^1.4.0",
@@ -14,7 +16,10 @@
     "express": "^4.17.1",
     "express-ip": "^1.0.4",
     "inquirer": "^7.1.0",
+    "jetty": "^0.2.1",
     "jsdom": "^16.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "pretty-bytes": "^5.3.0",
     "requirer": "0.0.4",
     "serve": "^11.3.0",
     "socket.io": "^2.3.0",
