--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,16 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    
         {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
+            "arguments":["receive","-l"],
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/server.js"
+            "program": "${workspaceFolder}/cli.js"
         }
     ]
 }
