--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "main": "seed.js",
   "dependencies": {
     "ascii-art": "^2.5.0",
+    "axios": "^0.19.2",
     "browserify": "^16.5.0",
+    "center-align": "^1.0.1",
     "cfonts": "^2.8.1",
     "clear": "^0.1.0",
     "cli-progress": "^3.6.0",
     "cli-spinner": "^0.2.10",
+    "clipboardy": "^2.3.0",
     "colors": "^1.4.0",
     "commander": "^5.0.0",
     "cors": "^2.8.5",
@@ -19,6 +22,7 @@
     "jetty": "^0.2.1",
     "jsdom": "^16.2.1",
     "jsonwebtoken": "^8.5.1",
+    "on-change-network": "0.0.2",
     "pretty-bytes": "^5.3.0",
     "requirer": "0.0.4",
     "serve": "^11.3.0",
